--- a/ressume.css
+++ b/ressume.css
@@ -1,3 +1,6 @@
+.ime{
+    padding-left:500px;
+}
 .rr1{
     border:5px dotted white;
     padding-left:100px;
@@ -9,4 +12,7 @@
 .re {
     border:5px dotted white;
     padding-left:100px;
+}
+.sem{
+    padding-left:550px;
 }
