--- a/resum.css
+++ b/resum.css
@@ -1,6 +1,16 @@
+
 .resume{
+    
+    padding-top:50px;
     border:5px dotted black;
 }
 .r1{
+    padding-top:5px;
     border:5px dotted black;
+}
+.suu{
+    padding-left:600px;
+}
+body{
+    background-color:#cecece;
 }
