--- a/ressume.css
+++ b/ressume.css
@@ -1,6 +1,34 @@
+@media only screen and (max-width:400px){
+    .ime{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
+}
 .ime{
     padding-left:500px;
 }
+@media only screen and (max-width:400px){
+    .rr1{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
+}
+@media only screen and (max-width:400px){
+    .rr2{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
+}
+
 .rr1{
     border:5px dotted white;
     padding-left:100px;
@@ -9,9 +37,28 @@
     border:5px dotted white;
     padding-left:100px;
 }
+@media only screen and (max-width:400px){
+    .re{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
+
+}
 .re {
     border:5px dotted white;
     padding-left:100px;
+}
+@media only screen and (max-width:400px){
+    .sem{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
 }
 .sem{
     padding-left:550px;
