--- a/resum.css
+++ b/resum.css
@@ -1,4 +1,12 @@
-
+@media only screen and (max-width:400px){
+    .resume{
+        height:300px;
+        width:300px;
+    }
+    .c-html{
+        font-size:50px;
+    }
+}
 .resume{
     
     padding-top:50px;
